# JARVIS_0.0.1

./: BUILD_GUIDE.md  Cargo.toml  README.md  README_ANDROID.md
crates/jarvis-core/: Cargo.toml
crates/jarvis-core/src/recorder/: android.rs
crates/jarvis-gui/: tauri.conf.json
jarvis-core/src/: recorder.rs
jarvis-gui/: Cargo.toml
jarvis-gui/src/: main.rs
plugins/tauri-plugin-jarvis-audio/: Cargo.toml  build.rs
plugins/tauri-plugin-jarvis-audio/android/: build.gradle.kts
plugins/tauri-plugin-jarvis-audio/android/src/main/: AndroidManifest.xml
plugins/tauri-plugin-jarvis-audio/android/src/main/java/com/jarvis/audio/: AudioPlugin.kt
plugins/tauri-plugin-jarvis-audio/src/: lib.rs  mobile.rs
scripts/: build-android.sh  download-vosk-models.sh
vosk/vosk-model-en-us-0.22-lgraph/am/: tree
